force-app/main/default/objects/System_Property__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>This is the unique name of the system property which is used as a reference in dynamic expressions.</description>
    <inlineHelpText>This is the unique name of the system property which is used as a reference in dynamic expressions.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>