force-app/main/default/objects/System_Property__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the environment which is linked to the system property.</description>
    <inlineHelpText>Lookup field to the environment which is linked to the system property.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>System Properties</relationshipLabel>
    <relationshipName>System_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>