force-app/main/default/objects/System_Property__c/fields/Is_Global__c.field-meta.xml
<CustomField>
    <fullName>Is_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if you want to share the System Property among multiple pipelines and environments.</inlineHelpText>
    <label>Is Global?</label>
    <type>Checkbox</type>
</CustomField>