force-app/main/default/objects/System_Property__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On setting this checkbox, this system property will be shared with &quot;All the Company&quot; Public Group</description>
    <inlineHelpText>On setting this checkbox, this system property will be shared with &quot;All the Company&quot; Public Group</inlineHelpText>
    <label>Is Public?</label>
    <type>Checkbox</type>
</CustomField>