force-app/main/default/objects/System_Property__c/fields/Is_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checbox to hide the sensitive information.</description>
    <inlineHelpText>Select this checbox to hide the sensitive information.</inlineHelpText>
    <label>Hide Value</label>
    <type>Checkbox</type>
</CustomField>