force-app/main/default/objects/System_Property__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the user linked to the system property.</description>
    <inlineHelpText>Lookup field to the user linked to the system property.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>