force-app/main/default/objects/System_Property__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>This is the value of the system property.</description>
    <inlineHelpText>This is the value of the system property.</inlineHelpText>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>