force-app/main/default/objects/System_Property__c/validationRules/Lookups_empty_for_Global_Property.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookups_empty_for_Global_Property</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Is_Global__c = True,
OR(
NOT(ISBLANK(User__c)),
NOT(ISBLANK(Pipeline__c)),
NOT(ISBLANK(Environment__c))
))</errorConditionFormula>
    <errorMessage>The environment, pipeline, and user lookups must be empty if the &apos;Is Global&apos; checkbox is selected.</errorMessage>
</ValidationRule>