force-app/main/default/objects/System_Property__c/validationRules/Value_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_cannot_be_empty</fullName>
    <active>true</active>
    <description>System property record must have a value</description>
    <errorConditionFormula>ISBLANK(Value__c)</errorConditionFormula>
    <errorMessage>You must provide a value for this system property.</errorMessage>
</ValidationRule>